--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simle website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Simple website</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium perferendis ducimus nisi molestiae molestias veniam soluta facere nobis sed facilis similique corrupti laudantium magni fugit at officia, dolore voluptas dicta.</p>
+
+    </div>
 </body>
 </html>
