--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium perferendis ducimus nisi molestiae molestias veniam soluta facere nobis sed facilis similique corrupti laudantium magni fugit at officia, dolore voluptas dicta.</p>
 
     </div>
+    <div>
+        <h1>Simple website</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium perferendis ducimus nisi molestiae molestias veniam soluta facere nobis sed facilis similique corrupti laudantium magni fugit at officia, dolore voluptas dicta.</p>
+
+    </div>
+
+    <div>
+        <h1>Simple website</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium perferendis ducimus nisi molestiae molestias veniam soluta facere nobis sed facilis similique corrupti laudantium magni fugit at officia, dolore voluptas dicta.</p>
+
+    </div>
 </body>
 </html>
