--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium perferendis ducimus nisi molestiae molestias veniam soluta facere nobis sed facilis similique corrupti laudantium magni fugit at officia, dolore voluptas dicta.</p>
 
     </div>
+    
+    <div>
+        <h1>Kim jon un</h1>
+        <img src="image/Kim_Jong-un_2024.jpg" alt="">
+    </div>
 </body>
 </html>
