--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     
     <div>
         <h1>Kim jon un</h1>
+        <h2>Kim with Dim</h2>
         <img src="image/Kim_Jong-un_2024.jpg" alt="">
     </div>
 </body>
